--- a/PartyInvitations/PartyInvitations/Views/Home/Index.cshtml
+++ b/PartyInvitations/PartyInvitations/Views/Home/Index.cshtml
@@ -5,11 +5,14 @@
 
 <h2>Index</h2>
 
-<p>We're having a party!<br />
 
-    </p>
-<img src="~/Images/pikachu.png" />
-<br />
-
-@Html.ActionLink("RSVP now!","RsvpForm")
-
+<div class="text-center">
+    <h3>It's Party Time!!<br /></h3>
+    <h4>And you're invited!</h4>
+    
+    <img src="~/Images/pikachu.png" />
+    <br />
+    <div class="btn btn-success">
+        @Html.ActionLink("RSVP now!","RsvpForm")
+    </div>
+</div>
