--- a/RobsMVCMovies/RobsMVCMovies/Views/Home/Delete.cshtml
+++ b/RobsMVCMovies/RobsMVCMovies/Views/Home/Delete.cshtml
@@ -5,8 +5,20 @@
 }
 
 <h2>Delete</h2>
+
+
+    <dl>
+        <dt>@Html.DisplayNameFor(model => model.Title)</dt>
+        <dd>@Html.DisplayFor(model => model.Title)</dd>
+        <dt>@Html.DisplayNameFor(model => model.ReleaseDate)</dt>
+        <dd>@Html.DisplayFor(model => model.ReleaseDate.Value.Year)</dd>
+        <dt>@Html.DisplayNameFor(model => model.Genre)</dt>
+        <dd>@Html.DisplayFor(model => model.Genre)</dd>
+        <dt>@Html.DisplayNameFor(model => model.Price)</dt>
+        <dd>£@Html.DisplayFor(model => model.Price)</dd>
+    </dl>
 @using (Html.BeginForm())
 {
     <input type="submit" value="Delete" />
 }
-@Html.ActionLink("Back to List", "Index");
+@Html.ActionLink("Back to List", "Index")
