--- a/RobsMVCMovies/RobsMVCMovies/Views/Home/Details.cshtml
+++ b/RobsMVCMovies/RobsMVCMovies/Views/Home/Details.cshtml
@@ -10,7 +10,7 @@
 <div>
     <h4>Movie Details</h4>
     <hr />
-    <dl>
+    <dl class="dl-horizontal">
         <dt>@Html.DisplayNameFor(model => model.Title)</dt>
         <dd>@Html.DisplayFor(model => model.Title)</dd>
         <dt>@Html.DisplayNameFor(model => model.ReleaseDate)</dt>
