--- a/RobsMVCMovies/RobsMVCMovies/Views/Home/Edit.cshtml
+++ b/RobsMVCMovies/RobsMVCMovies/Views/Home/Edit.cshtml
@@ -9,29 +9,43 @@
 <h2>Edit</h2>
 @using (Html.BeginForm())
 {
+     @Html.ValidationSummary(true, "Please fix the errors", new { @class = "text-danger"})
     <div>
         <h4>Movie</h4>
         <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
 
         <div>
         @Html.LabelFor(model => model.Title)
         @Html.EditorFor(model => model.Title)
+        @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
+
+
         </div>
 
         <div>
             @Html.LabelFor(model => model.ReleaseDate)
             @Html.EditorFor(model => model.ReleaseDate)
+            @Html.ValidationMessageFor(model => model.ReleaseDate, "", new { @class = "text-danger" })
+
+
         </div>
 
         <div>
             @Html.LabelFor(model => model.Genre)
             @Html.EditorFor(model => model.Genre)
+            @Html.ValidationMessageFor(model => model.Genre, "", new { @class = "text-danger" })
+
+
         </div>
 
         <div>
             @Html.LabelFor(model => model.Price)
             @Html.EditorFor(model => model.Price)
+            @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
+
+
         </div>
 
         <input type="submit" value="Save" />
